fixed bug with maintenance pricing on mobile

--- a/src/styles/Pages/Services.module.css
+++ b/src/styles/Pages/Services.module.css
@@ -90,6 +90,15 @@
     color: green;
 }
 
+.priceMonth {
+    list-style-type: none;
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 20px;
+    font-weight: 700;
+    color: green;
+}
+
 .link {
     color: rgb(139, 158, 183, 0.85);
     font-family: 'Montserrat';
